--- a/survey/survey.css
+++ b/survey/survey.css
@@ -6,7 +6,7 @@ body {
   flex-direction: column;
   justify-content: space-around;
   align-items: space-around; */
-  border: 3px dotted black;
+  /* border: 3px dotted black; */
   height: 100%;
   width: auto;
   overflow: hidden;
@@ -21,10 +21,10 @@ header {
 
 .status-bar {
   /* width: 99.8%; */
-  width: 100%;
+  width: 90%;
   height: 5px;
   border: 2px solid blue;
-  background-color: blue;
+  /* background-color: blue; */
 }
 
 /* main {
@@ -41,15 +41,14 @@ header {
   width: auto;
   height: 80%;
   /* margin-top: 30px; */
-  border: 5px solid orange;
+  /* border: 5px solid orange; */
 }
 
 .question {
   width: 90%;
-  height: 50px;
-  margin-top: 10px;
-  border: 1px solid green;
-  background-color: green;
+  height: 100px;
+  border: 2px solid green;
+  /* background-color: green; */
 }
 
 .responses {
@@ -58,17 +57,19 @@ header {
   justify-content: center;
   align-items: center;
   width: 90%;
-  height: 500px;
+  height: 450px;
+  margin-top: 10px;
   /* margin-top: 30px; */
-  border: 2px solid purple;
+  /* border: 2px solid purple; */
 }
 
 .choose {
-  width: 97%;
-  height: 30px;
-  margin-top: 10px;
-  border: 1px solid brown;
-  background-color: brown;
+  width: 100%;
+  height: 60px;
+  margin-top: 20px;
+  border: 2px solid brown;
+  border-radius: 10px;
+  /* background-color: brown; */
 }
 
 nav {
@@ -76,13 +77,13 @@ nav {
   align-items: space-around;
   width: auto;
   height: 10%;
-  background-color: gray;
+  /* background-color: gray; */
 }
 
-.btn {
+button {
   width: 90%;
-  height: 30px;
-  margin: 20px;
+  height: 40px;
+  margin: 10px 180px 20px 180px;
   border: 2px solid black;
-  background-color: pink;
+  /* background-color: pink; */
 }
