--- a/index.css
+++ b/index.css
@@ -2,7 +2,8 @@
 
 .main {
   display: flex;
-  /* justify-content:space-between; */
+  justify-content: center;
+  align-content: space-around;
   flex-direction: column;
   align-items: center;
   background-color: black;
@@ -21,7 +22,7 @@
   color: white;
 }
 
-.button {
+button {
   display: flex;
   margin-bottom: 7%;
   justify-content: center;
@@ -32,6 +33,7 @@
   border-radius: 20px;
   background-color: blue;
   font-size: 38px;
+  border-width: 0;
   cursor: pointer;
   color: white;
 }
