--- a/index.css
+++ b/index.css
@@ -9,6 +9,17 @@
   background-color: black;
 }
 
+.midBox {
+  width: 40%;
+  height: 80%;
+  margin-top: 10%;
+  display: flex;
+  justify-content: center;
+  align-content: space-around;
+  flex-direction: column;
+  align-items: center;
+  background-color: #00d5d8;
+}
 .title {
   display: flex;
   margin-top: 10%;
@@ -19,7 +30,10 @@
   font-weight: 900;
   /* background-color: blue; */
   font-size: 80px;
-  color: white;
+  color: black;
+}
+
+.user {
 }
 
 button {
@@ -27,7 +41,7 @@ button {
   margin-bottom: 7%;
   justify-content: center;
   align-items: center;
-  width: 400px;
+  width: 300px;
   height: 100px;
   font-weight: 900;
   border-radius: 20px;
