--- a/survey/survey.css
+++ b/survey/survey.css
@@ -19,13 +19,11 @@ header {
   height: 5%;
 }
 
-.status-bar {
-  /* width: 99.8%; */
+/* .status-bar {
   width: 90%;
   height: 5px;
   border: 2px solid blue;
-  /* background-color: blue; */
-}
+} */
 
 .result {
   display: flex;
@@ -35,7 +33,7 @@ header {
   margin-top: 20px;
   width: auto;
   height: 80%;
-  border: 2px solid red;
+  /* border: 2px solid red; */
 }
 
 /* main {
@@ -80,28 +78,32 @@ header {
   margin-top: 20px;
   border: 2px solid brown;
   border-radius: 10px;
-  /* background-color: brown; */
+  background-color: #eeebff;
+}
+
+.clicked {
+  background-color: #a18eff;
 }
 
 nav {
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
 
   align-items: flex-start;
 
   width: 100%;
-  height: 10%;
+  height: 15%;
 
   position: fixed;
   bottom: 0px;
   /* position: fixed; */
-  background-color: gray;
+  /* background-color: gray; */
 }
 
-button {
-  width: 35%;
+.nextBtn {
+  width: 300px;
   height: 50px;
   /* margin: 5% 10%; */
   border: 2px solid black;
-  /* background-color: pink; */
+  background-color: pink;
 }
