--- a/result/result.css
+++ b/result/result.css
@@ -19,10 +19,13 @@ header {
   height: 5%;
 }
 
+canvas {
+  border: 1px solid black;
+}
+
 /* .status-bar {
   width: 90%;
   height: 5px;
-  border: 2px solid blue;
 } */
 
 .result {
@@ -33,7 +36,7 @@ header {
   /* padding: 5% 0; */
   width: auto;
   height: auto;
-  border: 2px solid red;
+  /* border: 2px solid red; */
 }
 
 .title {
@@ -45,7 +48,7 @@ header {
   width: 500px;
   height: 500px;
   margin-bottom: 30px;
-  background-color: pink;
+  /* background-color: pink; */
 }
 
 .snsBtn {
