--- a/result/result.css
+++ b/result/result.css
@@ -7,7 +7,7 @@ body {
     justify-content: space-around;
     align-items: space-around; */
   /* border: 3px dotted black; */
-  height: 100%;
+  /* height: 100%; */
   width: auto;
   overflow: hidden;
 }
