canvas size init

--- a/result/result.css
+++ b/result/result.css
@@ -45,10 +45,17 @@ canvas {
 }
 
 .character {
-  width: 500px;
-  height: 500px;
+  width: 80%;
+  height: 80%;
+  max-width: 500px;
+  max-height: 500px;
   margin-bottom: 30px;
-  /* background-color: pink; */
+  background-color: pink;
+}
+
+.character .canvas {
+  width: 100%;
+  height: 100%;
 }
 
 .snsBtn {
