--- a/index.css
+++ b/index.css
@@ -1,63 +1,62 @@
 @import "reset.css";
 
-.main {
+* {
+	font-family: 'Russo One', sans-serif;
+}
+
+html, body {
   width: 100%;
   height: 100%;
   display: flex;
-  justify-content: space-around;
-  align-content: center;
   flex-direction: column;
-  /* align-items: center; */
-  /* background-color: red; */
+  justify-content:center;
+  align-items: center;
 }
 
 .midBox {
   width: 40%;
-  height: 80%;
-  /* height: 500px; */
-
-  /* margin-top: 10%; */
+  height: 50%;
   display: flex;
   justify-content: center;
-  align-content: space-around;
+  align-content: space-between;
   flex-direction: column;
   align-items: center;
-  background-color: #00d5d8;
 }
+
 .title {
   display: flex;
-  margin: 0% 10%;
   justify-content: center;
   align-items: center;
+  margin:5% 0%;
   width: 80%;
   height: 30%;
-  font-weight: 900;
-  background-color: blue;
-  font-size: 80px;
+  font-weight: 600;
+  font-size: 150px;
   color: black;
+  font-family: 'Russo One', sans-serif;
 }
 
 .user {
-  border-bottom: 5px solid black;
+  border-bottom: 0px;
+  /* border-bottom: 5px solid black; */
   background-color: transparent;
   text-align: center;
   font-size: 30px;
-  color: white;
   border-right: 0px;
   border-top: 0px;
   border-left: 0px;
   padding-bottom: 10px;
+
 }
 
 button {
+  padding: 10px 20px 10px 20px ;
   display: flex;
-  margin-bottom: 7%;
+  margin: 7%;
   justify-content: center;
   align-items: center;
-  width: 300px;
-  height: 100px;
-  font-weight: 900;
-  border-radius: 20px;
+  font-weight: 600;
+  border-radius: 40px;
   background-color: #00afb1;
   font-size: 38px;
   border-width: 0;
