--- a/survey/survey.css
+++ b/survey/survey.css
@@ -1,32 +1,45 @@
 @import "../reset.css";
 
 html,body {
-  display: flex;
+	display: flex;
   flex-direction: column;
-  /* justify-content: space-between; */
   align-items: center;
   /* border: 3px dotted black; */
   height: 100%;
   width: 100%;
+  font-size: 62.5%;
    
 }
 
-header {
-  display: flex;
-  width: 100%;
-  justify-content: center;
-  align-items: flex-end;
-  height: 5%;
-  background-color: #00afb1;
 
+header {
+	width: 100%;
+	height: 30px;
+	background-color: #00afb1;
 }
 
-/* .status-bar {
-  width: 90%;
-  height: 5px;
-  border: 2px solid blue;
-} */
 
+.status-bar {
+  width: 100%;
+  height: 100%;
+}
+.status-bar[value] {
+	-webkit-appearance: none;
+	appearance: none;
+  }
+
+  
+.status-bar[value]::-webkit-progress-bar {
+
+
+	background-color:rgb(255, 245, 247);
+  }
+
+  .status-bar[value]::-webkit-progress-value {
+	background-color: #8396e9;
+
+
+  }
 .result {
   display: flex;
   flex-direction: column;
@@ -34,11 +47,11 @@ header {
   align-items: center;
   align-content: center;
   margin-top: 20px;
-  width: 80%;
+  width: 100%;
+  color:rgb(32, 32, 32);
 
   max-width: 1200px;
   height: 80%;
-  /* border: 2px solid red; */
 }
 
 /* main {
@@ -61,8 +74,13 @@ header {
 .question {
   width: 90%;
   height: 100px;
-  border: 2px solid green;
-  /* background-color: green; */
+  font-size: 4.5vh ;
+  display: flex;
+  align-items: center;
+
+  word-break:keep-all;
+	font-family: 'Black Han Sans', sans-serif;
+  /*background-color: red;*/
 }
 
 .responses {
@@ -72,8 +90,12 @@ header {
   align-items: center;
 
   width: 90%;
+  min-height: 300px;
   height: 40%;
   margin-top: 10px;
+  line-height: 1.3;
+font-family: 'Nanum Gothic', sans-serif;
+
   /* margin-top: 30px; */
   /* border: 2px solid purple; */
 }
@@ -84,17 +106,15 @@ header {
   margin-top: 20px;
   display: flex;
   align-items: center;
-  font-size: 20px;
-  padding-left: 10px;
+  font-size: 2.3vh;
+  padding: 0px 10px;
   
-  border: 2px solid rgb(87, 42, 165);
   border-radius: 20px;
-  background-color: #eeebff;
+  background-color: #f3f1ff;
 }
 
 .clicked {
-  border: 2px solid white;
-  background-color: #a18eff;
+  background-color: #bcafff;
 }
 
 nav {
@@ -117,12 +137,12 @@ nav {
   height: 50px;
   padding: 10px 20px 10px 20px ;
   display: flex;
-  margin: 7%;
+  margin-top: 7%;
   justify-content: center;
   align-items: center;
   font-weight: 600;
   border-radius: 20px;
-  background-color: pink;
+  background-color: hsl(177, 46%, 56%);
   font-size: 38px;
   border-width: 0;
   cursor: pointer;
