--- a/survey/survey.css
+++ b/survey/survey.css
@@ -23,6 +23,7 @@ header {
   width: 100%;
   height: 100%;
 }
+
 .status-bar[value] {
 	-webkit-appearance: none;
 	appearance: none;
@@ -30,15 +31,11 @@ header {
 
   
 .status-bar[value]::-webkit-progress-bar {
-
-
 	background-color:rgb(255, 245, 247);
   }
 
   .status-bar[value]::-webkit-progress-value {
 	background-color: #8396e9;
-
-
   }
 .result {
   display: flex;
@@ -96,6 +93,7 @@ header {
   line-height: 1.3;
 font-family: 'Nanum Gothic', sans-serif;
 
+  word-break:keep-all;
   /* margin-top: 30px; */
   /* border: 2px solid purple; */
 }
