--- a/index.css
+++ b/index.css
@@ -34,7 +34,6 @@ body {
 }
 
 .user {
-  /* border-bottom: 3px solid black; */
   background-color: transparent;
   text-align: center;
   font-size: 5vh;
@@ -43,13 +42,16 @@ body {
   outline: 0;
 }
 
+input::placeholder {
+  font-family: "Russo One", sans-serif;
+}
+
 button {
   padding: 1vh 2vh;
   display: flex;
   margin: 7%;
   justify-content: center;
   align-items: center;
-  font-weight: 600;
   border-radius: 40px;
   background-color: #00afb1;
   font-size: 5vh;
@@ -57,4 +59,5 @@ button {
   outline: 0;
   cursor: pointer;
   color: white;
+  font-family: "Russo One", sans-serif;
 }
