--- a/survey/survey.css
+++ b/survey/survey.css
@@ -34,6 +34,7 @@ header {
 }
 
 .result {
+  -webkit-tap-highlight-color: transparent; 
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -57,6 +58,7 @@ header {
 }
 
 .responses {
+  -webkit-tap-highlight-color: transparent; 
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -72,6 +74,7 @@ header {
 }
 
 .choose {
+  -webkit-tap-highlight-color: transparent; 
   width: 100%;
   height: 60px;
   margin-top: 20px;
