--- a/index.css
+++ b/index.css
@@ -24,7 +24,6 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin: 5% 0%;
   width: 80%;
   height: 30%;
   font-weight: 600;
@@ -33,11 +32,20 @@ body {
   font-family: "Russo One", sans-serif;
 }
 
+span {
+  font-family: 'Nanum Gothic Coding', "Russo One";
+
+  margin-top: 1%;
+  margin-bottom: 5%;
+
+}
 .user {
+  font-family: "Russo One", 'Nanum Gothic Coding';
+
   background-color: transparent;
   text-align: center;
   font-size: 5vh;
-  padding-bottom: 10px;
+  padding-bottom: 5px;
   border: 0;
   outline: 0;
 }
@@ -50,7 +58,7 @@ button {
   -webkit-tap-highlight-color: transparent; 
   padding: 1vh 2vh;
   display: flex;
-  margin: 7%;
+  margin: 3%;
   justify-content: center;
   align-items: center;
   border-radius: 40px;
