--- a/survey/survey.css
+++ b/survey/survey.css
@@ -4,7 +4,7 @@ html,body {
 	display: flex;
   flex-direction: column;
   align-items: center;
-  height: 100%;
+  height: auto;
   width: 100%;
   font-size: 62.5%;
 }
