--- a/result/result.css
+++ b/result/result.css
@@ -16,24 +16,27 @@ section:nth-child(2) {
 }
 
 section:last-child {
-  border-inline:5px dotted brown;
-  flex-direction: column;
+  /* border-inline:5px dotted brown; */
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
 }
 
 canvas {
-  border: 3px solid black;
+  border: 4px solid black;
+  border-radius: 5%;
+  box-shadow: 0 50px 100px -20px rgba(50,50,93,.25), 0 30px 60px -30px rgba(0,0,0,.3), inset 0 -2px 6px 0 rgba(10,37,64,.35);
+
 }
 
 .result {
-  border: 2px solid red;
+  /* border: 2px solid red; */
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 100%;
+  width: auto;
   height: auto;
 }
 
@@ -67,14 +70,17 @@ canvas {
 .character {
   width: auto;
   height: auto;
+  
   /* border: 2px solid blue; */
 }
 
 .character:last-child{
-  width: 440px;
+  width: 400px;
   height: 440px;
+  border-radius: 5%;
+  box-shadow: 0 50px 100px -20px rgba(50,50,93,.25), 0 30px 60px -30px rgba(0,0,0,.3), inset 0 -2px 6px 0 rgba(10,37,64,.35);
   /* border: 2px solid yellow; */
-  border: 3px solid rgb(0, 5, 26);
+  /* border: 3px solid rgb(0, 5, 26); */
   padding: 30px;
   word-wrap: break-word;
 }
@@ -95,14 +101,16 @@ canvas {
   color: black;
   background-color: #00afb1;
   font-size: 30px;
-  line-height: 50px;
+  line-height: 70px;
   margin-bottom: 20px;
+  border-radius: 10px;
+  box-shadow: 0 50px 100px -20px rgba(50,50,93,.25), 0 30px 60px -30px rgba(0,0,0,.3), inset 0 -2px 6px 0 rgba(10,37,64,.35);
 }
 
 .subsub {
   /* background: #00afb1; */
-  line-height: 27px;
-  word-wrap: break-word;
+  line-height: 30px;
+  /* word-wrap: break-word; */
 }
 
 .canvas {
@@ -129,6 +137,7 @@ button {
   outline: 0;
   border-radius: 8px;
   cursor: pointer;
+  box-shadow: 0 50px 100px -20px rgba(50,50,93,.25), 0 30px 60px -30px rgba(0,0,0,.3), inset 0 -2px 6px 0 rgba(10,37,64,.35);
 }
 
 i {
@@ -190,7 +199,7 @@ i {
 } */
 
 .dev {
-  border: 2px solid red;
+  /* border: 2px solid red; */
   margin: 20px 0px;
   font-family: 'Nanum Gothic', sans-serif;
   font-size: 20px;
@@ -217,8 +226,8 @@ i {
 
 img {
   /* position: absolute; */
-  /* border: 2px solid burlywood; */
-  background: #333;
+  /* border: 0.05px solid black; */
+  background:rgb(232, 234, 244);
   /* margin-bottom: 100px; */
 }
 
