--- a/survey/survey.css
+++ b/survey/survey.css
@@ -120,6 +120,7 @@ nav {
   outline: 0;
   font-family: "Russo One", sans-serif;
   letter-spacing: 1px;
+  box-shadow: 0 50px 100px -20px rgba(50,50,93,.25), 0 30px 60px -30px rgba(0,0,0,.3), inset 0 -2px 6px 0 rgba(10,37,64,.35);
 }
 
 .nextBtn:active{
