--- a/index.css
+++ b/index.css
@@ -47,6 +47,7 @@ body {
 .user {
   font-family: "Russo One", 'Nanum Gothic';
   margin-top: 40px;
+  margin-bottom: 10px;
   background-color: transparent;
   text-align: center;
   font-size: 4vmin;
@@ -64,7 +65,7 @@ button {
   border: 0;
   outline: 0;
   cursor: pointer;
-  font-family: 'Nanum Gothic';
+  font-family:'Nanum Gothic', sans-serif;
   color: #fff;
   display: inline-block;
   min-width: 28px;
